syntax = "proto3";

option go_package = "github.com/andrewidianto/common/api";

package api;

message Order {
    string ID = 1;
    string customerID = 2;
    string status = 3;
    repeated Item Items = 4;  // Corrected this line
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (Order);  // Fixed 'return' to 'returns'
}

message Item {
    string ID = 1;
    string Name = 2;
    int32 Quantity = 3;
    string PriceID = 4;
}

message ItemsWithQuantity {
    string ID = 1;
    int32 Quantity = 2;
}

message CreateOrderRequest {
    string customerID = 1;
    repeated ItemsWithQuantity Items = 2;  // Corrected this line
}
